# hapi-core

./: .dockerignore  .eslintrc  Anchor.toml  LICENSE  README.md  npm-shrinkwrap.json  package-lock.json  package.json  rollup.config.js  tsconfig.json
client.rs/: Cargo.toml  LICENSE  README.md
client.rs/src/: commands.rs  lib.rs  main.rs
client.rs/src/client/: address.rs  amount.rs  asset.rs  case.rs  category.rs  configuration.rs  events.rs  interface.rs  mod.rs  network.rs  reporter.rs  result.rs  token.rs  uuid.rs
client.rs/src/client/entities/: address.rs  asset.rs  case.rs  category.rs  mod.rs  network.rs  reporter.rs
client.rs/src/client/implementations/: evm.rs  mod.rs  near.rs  solana.rs
client.rs/src/commands/: context.rs  matcher.rs
client.rs/src/hapi_core/: asset.rs  configuration.rs  interface.rs  mod.rs  result.rs
client.rs/src/hapi_core/implementations/: abi.json  evm.rs  mod.rs  near.rs  solana.rs
client.rs/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-EX22UFWNvN3PSbjS2jGkfN5BzMUypw7qTyrcKL84q8tE.tar.bz2  snapshot-200-3yHSiw4fpDRj9ubvUYLKctzsYqdndyVa1pB6XdgZsnNZ.tar.bz2  validator-keypair.json  vote-account-keypair.json
client.rs/test-ledger/accounts/run/: 0.4  166.7  199.6  65.2
client.rs/test-ledger/rocksdb/: 000052.sst  000053.sst  000054.sst  000055.sst  000056.sst  000057.sst  000058.sst  IDENTITY  LOG  LOG.old.1694188743844824  MANIFEST-000060  OPTIONS-000064  OPTIONS-000066
client.rs/test-ledger/snapshot/200/: 200  status_cache
client.rs/tests/: assert.rs  cli-evm.rs  cli-near.rs  cli-solana.rs  cli_evm.rs  cmd_utils.rs  common_fixtures.rs  evm.rs  setup.rs  util.rs
client.rs/tests/evm/: fixtures.rs  mod.rs  setup.rs  util.rs
client.rs/tests/near/: mod.rs  setup.rs  util.rs
client.rs/tests/solana/: fixtures.rs  mod.rs  setup.rs  validator_utils.rs
client.rs/tests/solana/keys/: token_2.json  wallet_1.json  wallet_3.json
explorer/: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.sample.toml
explorer/entity/: Cargo.toml
explorer/entity/src/: asset.rs  case.rs  lib.rs
explorer/migration/: Cargo.toml
explorer/migration/src/: lib.rs  m20231127_140636_create_address.rs  m20231127_160838_create_asset.rs  m20231127_161317_create_reporter.rs  m20231127_162130_create_case.rs  m20231127_162603_create_category_type.rs  m20231127_165849_create_reporter_role_type.rs  m20231127_170357_create_reporter_status_type.rs  m20231127_170630_create_case_status_type.rs  m20231205_131413_create_indexer.rs  m20231205_131413_create_network.rs  m20231205_131413_create_network_type.rs  m20231211_164133_create_network_name.rs
explorer/src/: application.rs  configuration.rs  error.rs  indexer.rs  lib.rs  main.rs
explorer/src/entity/: address.rs  asset.rs  case.rs  indexer.rs  mod.rs  network.rs  pagination.rs  reporter.rs  statistics.rs  types.rs
explorer/src/entity/address/: mod.rs  model.rs  query_utils.rs  resolver.rs
explorer/src/entity/asset/: mod.rs  model.rs  query_utils.rs  resolver.rs
explorer/src/entity/case/: mod.rs  model.rs  query_utils.rs  resolver.rs
explorer/src/entity/network/: mod.rs  model.rs  query_utils.rs  resolver.rs
explorer/src/entity/reporter/: mod.rs  model.rs  query_utils.rs  resolver.rs
explorer/src/migrations/: m20231127_140636_create_address.rs  m20231127_160838_create_asset.rs  m20231127_161317_create_reporter.rs  m20231127_162130_create_case.rs  m20231127_162603_create_category_type.rs  m20231127_165849_create_reporter_role_type.rs  m20231127_170630_create_case_status_type.rs  m20231205_131413_create_indexer.rs  m20231205_131413_create_network.rs  m20231211_164133_create_network_backend.rs  mod.rs
explorer/src/observability/: metrics_setup.rs  mod.rs  tracing_setup.rs
explorer/src/routes/: entities_handler.rs  events_handler.rs  health_handler.rs  indexer_handler.rs  jwt_auth.rs  mod.rs  server.rs  stats.rs
explorer/src/server/: app_server.rs  mod.rs  schema.rs  server.rs
explorer/src/server/handlers/: events.rs  graphql.rs  health.rs  indexer.rs  jwt_auth.rs  mod.rs  stats.rs
explorer/src/service/: mod.rs  mutation.rs  query.rs
explorer/tests/: mod.rs
explorer/tests/cli/: mod.rs
explorer/tests/graphql/: address_query.rs  asset_query.rs  case_query.rs  mod.rs  network_query.rs  reporter_query.rs  statistics.rs  statistics_query.rs
explorer/tests/helpers/: indexer_mock.rs  jwt.rs  mod.rs  request_sender.rs  test_app.rs  test_data.rs
explorer/tests/routes/: cors.rs  health_check.rs  indexer.rs  metrics.rs  mod.rs  webhoock_processing.rs  webhook_processing.rs
indexer/: .gitignore  Cargo.toml  README.md  configuration.near.toml  configuration.sample.toml
indexer/src/: config.rs  configuration.rs  lib.rs  main.rs  observability.rs
indexer/src/indexer/: client.rs  evm.rs  heartbeat.rs  jobs.rs  jwt.rs  logic.rs  mod.rs  network.rs  persistence.rs  push.rs  server.rs  solana.rs  state.rs
indexer/src/indexer/client/: evm.rs  indexer_client.rs  mod.rs  near.rs  solana.rs
indexer/tests/: configuration.near.toml  configuration.toml  indexer_test.rs  jwt.rs  simple_listener.rs
indexer/tests/manual_helpers/: simple_listener.py
indexer/tests/mocks/: evm_mock.rs  mod.rs  near_mock.rs  solana_mock.rs  webhook_mock.rs
migrations/program-migrations/: Cargo.toml  README.md  config.sample.yaml  config.yaml
migrations/program-migrations/src/: cli.rs  configuration.rs  main.rs  migration_list.rs
near/: Cargo.toml  Dockerfile  README.md  README_contract.md  build_docker.sh
near/contract/: Cargo.toml  build_docker.sh  build_local.sh
near/contract/src/: configuration.rs  errors.rs  lib.rs  token_transferer.rs  token_trasnferer.rs  utils.rs
near/contract/src/address/: management.rs  mod.rs  v_address.rs  view.rs
near/contract/src/assets/: management.rs  mod.rs  v_asset.rs  view.rs
near/contract/tests/: errors.rs  lib.rs
near/res/: hapi_core_near.wasm
programs/hapi-core/: Cargo.toml
programs/hapi-core/src/: context.rs  error.rs  lib.rs  utils.rs
solana/programs/hapi_core/: Cargo.toml
solana/programs/hapi_core_solana/: Cargo.toml
(+224 files in other folders)
