[package]
name = "hapi-core-cli"
authors = ["HAPI"]
version = "0.1.0"
edition = "2021"
description = "Rust Client for HAPI Protocol contracts"

[lib]
crate-type = ["lib"]
name = "hapi_core"

[dependencies]
async-trait = "0.1.72"
thiserror = "1.0.44"
tokio = { version = "1.28.0", features = ["full"] }
anyhow = { version = "1.0.72" }
clap = { version = "4.3.19", features = ["env"] }
regex = "1.9.1"
serde = "1.0.177"
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["serde"] }
dirs = "5.0.1"

# EVM dependencies
ethers = "=2.0.4"
ethers-providers = "=2.0.4"
ethers-signers = "=2.0.4"
ethers-contract = "=2.0.4"

# NEAR dependencies
near-sdk = "4.1.1"
near-crypto = "0.17.0"
near-primitives = "0.17.0"
near-chain-configs = "0.17.0"
near-jsonrpc-client = "0.6.0"
near-jsonrpc-primitives = "0.17.0"
hapi-core-near = { path = "../near/contract/" }

# Solana dependencies

[dependencies.anchor-client]
git = "https://github.com/hlgltvnnk/anchor.git"
branch = "update-dependencies"
features = ["async"]

[dependencies.solana-cli-config]
git = "https://github.com/hlgltvnnk/solana.git"
branch = "update-dependencies"

[dependencies.hapi_core_solana]
path = "../solana/programs/hapi_core_solana"
eatures = ["no-entrypoint"]

[dependencies.spl-associated-token-account]
git = "https://github.com/hlgltvnnk/solana-program-library.git"

[dependencies.spl-token]
git = "https://github.com/hlgltvnnk/solana-program-library.git"

[dev-dependencies]
bs58 = "0.5.0"

[dev-dependencies.solana-transaction-status]
git = "https://github.com/hlgltvnnk/solana.git"
branch = "update-dependencies"
