[package]
name = "hapi-core"
authors = ["HAPI <devs@hapi.one>"]
version = "0.3.0"
edition = "2021"
description = "Rust Client for HAPI Protocol contracts"
license-file = "LICENSE"
repository = "https://github.com/HAPIprotocol/hapi-core"
homepage = "https://hapi.one"

[lib]
crate-type = ["lib"]
name = "hapi_core"

[features]
decode = []

[dependencies]
async-trait = "0.1.72"
thiserror = "1.0.44"
tokio = { version = "1.28.0", features = ["full"] }
anyhow = { version = "1.0.72" }
clap = { version = "4.3.19", features = ["env"] }
regex = "1.9.1"
serde = "1.0.177"
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["serde"] }
enum_extract = "0.1"
dirs = "5.0.1"
borsh = { version = "0.10.3" }
bs58 = "0.5.0"
sha2 = "0.10.7"

# EVM dependencies
ethers = "=2.0.8"
ethers-providers = "=2.0.8"
ethers-signers = "=2.0.8"
ethers-contract = "=2.0.8"
ethers-core = "=2.0.8"

# NEAR dependencies

near-crypto = "0.19.0"
near-primitives = "0.19.0"
near-chain-configs = "0.19.0"
near-jsonrpc-client = "0.7.0"
near-jsonrpc-primitives = "0.19.0"
hapi-core-near = "0.3.0"

# TODO: Replace with the latest stable version of near-sdk-rs
near-sdk = "5.0.0-alpha.2"

# Solana dependencies

[dependencies.anchor-client]
git = "https://github.com/hlgltvnnk/anchor.git"
branch = "update-dependencies"
features = ["async"]
version = "*"

[dependencies.solana-cli-config]
git = "https://github.com/hlgltvnnk/solana.git"
branch = "update-dependencies"
version = "*"

[dependencies.solana-account-decoder]
git = "https://github.com/hlgltvnnk/solana.git"
branch = "update-dependencies"
version = "*"

[dependencies.solana-transaction-status]
git = "https://github.com/hlgltvnnk/solana.git"
branch = "update-dependencies"
version = "*"

[dependencies.hapi_core_solana]
path = "../solana/programs/hapi_core_solana"
version = "0.1.0"

[dependencies.spl-associated-token-account]
git = "https://github.com/hlgltvnnk/solana-program-library.git"
version = "*"

[dependencies.spl-token]
git = "https://github.com/hlgltvnnk/solana-program-library.git"
version = "*"

[dev-dependencies]
bs58 = "0.5.0"
