[package]
name = "hapi-explorer"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.7.1"

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json",
    "env-filter",
] }

config = "0.13.4"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["chrono"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4.4.11", features = ["cargo"] }
uuid = "1"

metrics-exporter-prometheus = "0.12.1"
metrics = "0.21.1"

sea-orm = "0.12.7"

migration = { path = "./migration" }
hapi_indexer = { path = "../indexer" }
hapi-core-cli = { path = "../client.rs" }

#jwt dependencies
jsonwebtoken = "9.1.0"
axum-extra = { version = "0.9.0", features = ["cookie"] }
secrecy = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = "0.11.12"
