[package]
name = "hapi-explorer"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.6.0"

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json",
    "env-filter",
] }

config = "0.13.4"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["chrono"] }
serde_json = "1"

anyhow = "1"
uuid = "1"
chrono = "0.4.19"

metrics-exporter-prometheus = "0.12.1"
metrics = "0.21.1"

sea-orm = "0.12.7"

async-graphql = { version = "6.0.11", features = ["uuid", "chrono"] }
async-graphql-axum = "6.0.11"

migration = { path = "./migration" }
hapi_indexer = { path = "../indexer" }
hapi-core-cli = { path = "../client.rs" }

[dev-dependencies]
reqwest = "0.11.12"
uuid = "1"
rand = "0.8.5"
