[package]
name = "hapi-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
hapi-core-cli = { path = "../client.rs" }
anyhow = "1"
axum = "0.6"
config = "0.13"
ethers = "2"
hyper = { version = "0.14", features = ["tcp"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_with = { version = "3", features = ["chrono_0_4"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json",
    "env-filter",
] }
uuid = { version = "1", features = ["serde"] }
reqwest = "0.11"

enum_extract = "0.1"

[dependencies.solana-client]
git = "https://github.com/hlgltvnnk/solana.git"
branch = "update-dependencies"

[dependencies.solana-sdk]
git = "https://github.com/hlgltvnnk/solana.git"
branch = "update-dependencies"

[dependencies.solana-transaction-status]
git = "https://github.com/hlgltvnnk/solana.git"
branch = "update-dependencies"

[dependencies.hapi_core_solana]
path = "../solana/programs/hapi_core_solana"
eatures = ["no-entrypoint"]
