[package]
name = "hapi-core-near"
authors = ["HAPI <devs@hapi.one>"]
version = "0.3.0"
edition = "2021"
description = "NEAR implementation of HAPI Protocol contract"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/HAPIprotocol/hapi-core"
homepage = "https://hapi.one"

[workspace]
members = ["contract"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
