[package]
name = "hapi-core-near"
authors = ["HAPI"]
version = "0.1.0"
edition = "2021"

readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "4.1.1" }
near-contract-standards = "4.1.1"

[dev-dependencies]
workspaces = "0.7"
tokio = { version = "1.26.0", features = ["full"] }
anyhow = "1.0.69"