[package]
name = "hapi-core-near"
authors = ["HAPI"]
version = "0.1.0"
edition = "2021"

readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.0.0", features = ["derive"] }

# TODO: Replace with the latest stable version of near-sdk-rs
[dependencies.near-sdk]
git = "https://github.com/near/near-sdk-rs.git"

[dependencies.near-contract-standards]
git = "https://github.com/near/near-sdk-rs.git"

[dev-dependencies]
uuid = { version = "1.4.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
workspaces = "0.7.0"
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.71"
