[package]
name = "hapi-core-near"
authors = ["HAPI <devs@hapi.one>"]
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
description = "NEAR implementation of HAPI Protocol contract"
repository = "https://github.com/HAPIprotocol/hapi-core"
homepage = "https://hapi.one"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.0.0", features = ["derive"] }

# TODO: Replace with the latest stable version of near-sdk-rs
near-sdk = "5.0.0-alpha.2"
near-contract-standards = "5.0.0-alpha.2"

[dev-dependencies]
uuid = { version = "1.4.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
workspaces = "0.7.0"
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.71"
