[package]
name = "hapi-core"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "hapi_core"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.0"
anchor-spl = "0.20.0"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
