[package]
name = "hapi-core"
version = "0.2.0"
description = "Core contract of HAPI Protocol"
homepage = "https://hapi.one"
repository = "https://github.com/HAPIprotocol/hapi-core"
documentation = "https://hapi-one.gitbook.io/"
license-file = "../../LICENSE"
readme = "../../README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "hapi_core"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
