[package]
name = "hapi_core_solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hapi_core_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
uuid = "1.3.4"

[dependencies.anchor-lang]
git = "https://github.com/hlgltvnnk/anchor.git"
branch = "update-dependencies"

[dependencies.anchor-spl]
git = "https://github.com/hlgltvnnk/anchor.git"
branch = "update-dependencies"
