[package]
name = "hapi-core-solana"
authors = ["HAPI <devs@hapi.one>"]
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
description = "Solana implementation of HAPI Protocol contract"
repository = "https://github.com/HAPIprotocol/hapi-core"
homepage = "https://hapi.one"

[lib]
crate-type = ["cdylib", "lib"]
name = "hapi_core_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
uuid = "1.3.4"

[dependencies.anchor-lang]
git = "https://github.com/hlgltvnnk/anchor.git"
branch = "update-dependencies"
version = "*"

[dependencies.anchor-spl]
git = "https://github.com/hlgltvnnk/anchor.git"
branch = "update-dependencies"
version = "*"
